# umcp

./: .gitignore  LICENSE  Makefile  PROMPTS.md  aioumcp.py  async_calculator_server.py  async_movie_server.py  calculator_server.py  movie_server.py  pyproject.toml  readme.md  umcp.py  umcp_shared.py
.github/: copilot-instructions.md
.github/workflows/: prune-actions-artifacts.yml  tests.yml
docs/: ARCHITECTURE.md  CHAINING.md  PROMPTS.md
examples/: async_calculator_server.py  async_movie_server.py  async_resource_server.py  calculator_server.py  movie_server.py  resource_server.py
scripts/: piclaw_streamable_http_smoke.ts
tests/: async_demo.py  compare_sync_async.py  conftest.py  simple_async_test.py  test_annotations.py  test_async_prompts.py  test_async_servers.py  test_async_sse_transport.py  test_coercion.py  test_completion_logging.py  test_discovery_pagination.py  test_introspection.py  test_movieserver.py  test_notifications.py  test_progress_cancellation.py  test_prompts.py  test_prompts_extra.py  test_protocol_errors.py  test_resources.py  test_resources_extra.py  test_schema_fallbacks.py  test_schema_generation.py  test_shared_negotiation_context.py  test_streamable_http_regressions.py  test_streamable_http_sync_async.py  test_tool_outputs_and_runtime_notifications.py  test_tools.py  test_transports.py
